# validator-keys-tool

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  appveyor.yml  circle.yml  conanfile.txt
.github/flujos de trabajo/: c-cpp.yml
.github/workflows/: c-cpp.yml  clang-format.yml
Builds/CMake/: KeysCov.cmake  KeysSanity.cmake
ci/: build-and-test.sh  install-boost.sh  install-dependencies.sh
ci/shared/: install_boost.sh
ci/ubuntu/: build-and-test.sh  build-in-docker.sh
ci/windows/: setup-msvc.sh
cmake/: KeysInterface.cmake  KeysNIH.cmake  KeysSanity.cmake
doc/: validator-keys-tool-guide.md
src/: ValidatorKeys.cpp  ValidatorKeys.h  ValidatorKeysTool.cpp  ValidatorKeysTool.h  json_reader.cpp
src/test/: KeyFileGuard.h  ValidatorKeysTool_test.cpp  ValidatorKeys_test.cpp
